--- a/cws/manifest.json
+++ b/cws/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description" : "Music and Audio files player for Google Drive.",
   "container" : "GOOGLE_DRIVE",
-  "api_console_project_id" : "music-188210",
+  "api_console_project_id" : "74997171636",
   "icons": {
     "128": "icon_128.png"
   },
